# NuMVC

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  NuMVC.cpp  NuMVC.h  README  basic.h  check_greedy.py  checker.h  data.txt  data_gen.py  example.in  log.out  main.cpp  pdsp.h  xmake.lua
greedy_output/: IEEE-118.graph  IEEE-14.graph  IEEE-30.graph  IEEE-300.graph  IEEE-57.graph  RTS-96.graph  case118.graph  case145.graph  case1888rte.graph  case1951rte.graph  case2383wp.graph  case2736sp.graph  case2737sop.graph  case2746wop.graph  case2746wp.graph  case2848rte.graph  case2868rte.graph  case3012wp.graph  case3375wp.graph  case6468rte.graph  case6470rte.graph  case_illinois200.graph
include/: basic.hpp  candidate.hpp  common.hpp  fss.hpp  graph.hpp  heap.h  mapgraph.hpp  nupds.hpp  pds.hpp  pdsgraph.hpp  utility.hpp  vecgraph.hpp  vecmap.hpp  vecset.hpp
scripts/: data_tranform.py
src/: checker.cpp  fss.cpp  graph.cpp  heap.cpp  main.cpp  nupds.cpp  pds.cpp  pdsgraph.cpp  test.cpp
test/: IEEE-14-sub.graph  IEEE-30.graph  case1888rte-sub0.graph  case1888rte-sub1.graph
testdata/: case118.graph  case145.graph  case1888rte.graph  case1951rte.graph  case2383wp.graph  case2736sp.graph  case2737sop.graph  case2746wop.graph  case2746wp.graph  case2848rte.graph  case2868rte.graph  case3012wp.graph  case3375wp.graph  case6468rte.graph  case6470rte.graph  case_illinois200.graph
